--- a/bakery/src/pages/index.astro
+++ b/bakery/src/pages/index.astro
@@ -1,5 +1,18 @@
 ---
-import BaseLayout from "../../layouts/BaseLayout.astro";
+import Product from "../components/Product.svelte";
+import BaseLayout from "../layouts/BaseLayout.astro";
+import { products } from "../lib/products";
 ---
 
-<BaseLayout />
+<BaseLayout>
+  {
+    products.map((p) => (
+      <Product
+        id={p.title.toLowerCase().replace(/\s/, "_")}
+        client:visible
+        img={p.img}
+        title={p.title}
+      />
+    ))
+  }
+</BaseLayout>
